deploy/prod-preview/deployment-fdk-resource-service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fdk-resource-service-preview
  labels:
    app: fdk-resource-service-preview
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fdk-resource-service-preview
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: fdk-resource-service-preview
      annotations:
        prometheus.io/scrape: "false"
    spec:
      serviceAccountName: error-reporting-sa
      containers:
        - name: fdk-resource-service-preview
          image: fdk-resource-service-preview
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
          resources:
            requests:
              memory: 5Gi
