deploy/prod-preview/service-fdk-resource-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fdk-resource-service-preview
spec:
  selector:
    app: fdk-resource-service-preview
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
